--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,4 +15,166 @@ body, html {
   background-size: 105% auto;
   background-repeat: no-repeat; }
 
+img {
+  max-width: 100%;
+  height: auto; }
+
+.slider {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  -webkit-perspective: 2000px;
+  -khtml-perspective: 2000px;
+  -moz-perspective: 2000px;
+  -ms-perspective: 2000px;
+  -o-perspective: 2000px;
+  perspective: 2000px;
+  -webkit-perspective-origin: 50% 50%;
+  -khtml-perspective-origin: 50% 50%;
+  -moz-perspective-origin: 50% 50%;
+  -ms-perspective-origin: 50% 50%;
+  -o-perspective-origin: 50% 50%;
+  perspective-origin: 50% 50%; }
+  .slider .slide {
+    width: 800px;
+    max-width: 100%;
+    max-height: 550px;
+    cursor: pointer;
+    -webkit-box-sizing: border-box;
+    -khtml-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -ms-box-sizing: border-box;
+    -o-box-sizing: border-box;
+    box-sizing: border-box;
+    -webkit-transition: transform 0.35s ease-in;
+    -khtml-transition: transform 0.35s ease-in;
+    -moz-transition: transform 0.35s ease-in;
+    -ms-transition: transform 0.35s ease-in;
+    -o-transition: transform 0.35s ease-in;
+    transition: transform 0.35s ease-in;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    -webkit-transform: translate3d(0, 0, -1300px) rotatey(45deg);
+    -khtml-transform: translate3d(0, 0, -1300px) rotatey(45deg);
+    -moz-transform: translate3d(0, 0, -1300px) rotatey(45deg);
+    -ms-transform: translate3d(0, 0, -1300px) rotatey(45deg);
+    -o-transform: translate3d(0, 0, -1300px) rotatey(45deg);
+    transform: translate3d(0, 0, -1300px) rotatey(45deg); }
+    .slider .slide img {
+      border: solid 5px white;
+      -webkit-box-shadow: 0 0 15px #111;
+      -khtml-box-shadow: 0 0 15px #111;
+      -moz-box-shadow: 0 0 15px #111;
+      -ms-box-shadow: 0 0 15px #111;
+      -o-box-shadow: 0 0 15px #111;
+      box-shadow: 0 0 15px #111;
+      -webkit-border-radius: 5px;
+      -khtml-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      border-radius: 5px; }
+    .slider .slide:nth-child(1) {
+      z-index: 10;
+      -webkit-transform: translate3d(445px, 150px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(445px, 150px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(445px, 150px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(445px, 150px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(445px, 150px, -2000px) rotatey(-45deg);
+      transform: translate3d(445px, 150px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(2) {
+      z-index: 9;
+      -webkit-transform: translate3d(490px, 100px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(490px, 100px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(490px, 100px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(490px, 100px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(490px, 100px, -2000px) rotatey(-45deg);
+      transform: translate3d(490px, 100px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(3) {
+      z-index: 8;
+      -webkit-transform: translate3d(535px, 50px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(535px, 50px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(535px, 50px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(535px, 50px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(535px, 50px, -2000px) rotatey(-45deg);
+      transform: translate3d(535px, 50px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(4) {
+      z-index: 7;
+      -webkit-transform: translate3d(580px, 0px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(580px, 0px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(580px, 0px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(580px, 0px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(580px, 0px, -2000px) rotatey(-45deg);
+      transform: translate3d(580px, 0px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(5) {
+      z-index: 6;
+      -webkit-transform: translate3d(625px, -50px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(625px, -50px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(625px, -50px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(625px, -50px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(625px, -50px, -2000px) rotatey(-45deg);
+      transform: translate3d(625px, -50px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(6) {
+      z-index: 5;
+      -webkit-transform: translate3d(670px, -100px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(670px, -100px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(670px, -100px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(670px, -100px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(670px, -100px, -2000px) rotatey(-45deg);
+      transform: translate3d(670px, -100px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(7) {
+      z-index: 4;
+      -webkit-transform: translate3d(715px, -150px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(715px, -150px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(715px, -150px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(715px, -150px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(715px, -150px, -2000px) rotatey(-45deg);
+      transform: translate3d(715px, -150px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(8) {
+      z-index: 3;
+      -webkit-transform: translate3d(760px, -200px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(760px, -200px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(760px, -200px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(760px, -200px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(760px, -200px, -2000px) rotatey(-45deg);
+      transform: translate3d(760px, -200px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(9) {
+      z-index: 2;
+      -webkit-transform: translate3d(805px, -250px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(805px, -250px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(805px, -250px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(805px, -250px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(805px, -250px, -2000px) rotatey(-45deg);
+      transform: translate3d(805px, -250px, -2000px) rotatey(-45deg); }
+    .slider .slide:nth-child(10) {
+      z-index: 1;
+      -webkit-transform: translate3d(850px, -300px, -2000px) rotatey(-45deg);
+      -khtml-transform: translate3d(850px, -300px, -2000px) rotatey(-45deg);
+      -moz-transform: translate3d(850px, -300px, -2000px) rotatey(-45deg);
+      -ms-transform: translate3d(850px, -300px, -2000px) rotatey(-45deg);
+      -o-transform: translate3d(850px, -300px, -2000px) rotatey(-45deg);
+      transform: translate3d(850px, -300px, -2000px) rotatey(-45deg); }
+    .slider .slide.active {
+      z-index: 20;
+      -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+      -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+      -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+      -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+      -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+      transform: translate3d(-500px, 0, -1300px) rotatey(0deg); }
+      .slider .slide.active:hover {
+        -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+        -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+        -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+        -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+        -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
+        transform: translate3d(-500px, 0, -1300px) rotatey(0deg); }
+    .slider .slide:hover {
+      z-index: 20; }
+
 /*# sourceMappingURL=main.css.map */
