--- a/sass/base.scss
+++ b/sass/base.scss
@@ -41,7 +41,7 @@ img{
         @for $i from 1 through 10 {
             &:nth-child(#{$i}){ 
                 z-index: $decrement;
-                @include transform(translate3d((400 + ($stepX * $i)), -(-200 + ($stepY * $i)), -2000px) rotatey(-45deg));
+                @include transform(translate3d((400 + ($stepX * $i)), -(-260 + ($stepY * $i)), -2000px) rotatey(-45deg));
                 $decrement : $decrement - 1;
             }
         }
@@ -58,6 +58,49 @@ img{
         &:hover{
             z-index: 20;
         }
+    }
+}
+
+.back_button{
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    background: white;
+    width: 30px;
+    height: 30px;
+    opacity: .5;
+    @include border-radius(50%);
+    @include transition(all .5s ease);
+    @include box-shadow(0 0 2px rgba(255,255,255, .5));
+
+    &:hover{
+        opacity: 1;
+        @include box-shadow(0 0 8px rgba(255,255,255, .5));
+
+        .message{
+            width: 33px;
+            color: #111;
+            padding: .25rem .5rem;
+        }
+    }
+
+    img{
+        max-width: 100%;
+    }
+
+    .message{
+        position: absolute;
+        top: 1px;
+        left: 105%;
+        background: white;
+        font-weight: bold;
+        font-size: 14px;
+        font-family: comic sans;
+        width: 0;
+        color: transparent;
+        @include transition((width .12s ease, color .2s .12s ease));
+        @include border-radius(3px);
+        @include box-shadow(0 0 2px rgba(255,255,255, .5));
     }
 }
 
