--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -15,6 +15,14 @@ body, html {
   background-size: 105% auto;
   background-repeat: no-repeat; }
 
+body {
+  background-image: -webkit-radial-gradient(center, #9fa8da, #5c6bc0);
+  background-image: -khtml-radial-gradient(center, #9fa8da, #5c6bc0);
+  background-image: -moz-radial-gradient(center, #9fa8da, #5c6bc0);
+  background-image: -ms-radial-gradient(center, #9fa8da, #5c6bc0);
+  background-image: -o-radial-gradient(center, #9fa8da, #5c6bc0);
+  background-image: radial-gradient(center, #9fa8da, #5c6bc0); }
+
 img {
   max-width: 100%;
   height: auto; }
@@ -66,13 +74,13 @@ img {
     -o-transform: translate3d(0, 0, -1300px) rotatey(45deg);
     transform: translate3d(0, 0, -1300px) rotatey(45deg); }
     .slider .slide img {
-      border: solid 5px white;
-      -webkit-box-shadow: 0 0 15px #111;
-      -khtml-box-shadow: 0 0 15px #111;
-      -moz-box-shadow: 0 0 15px #111;
-      -ms-box-shadow: 0 0 15px #111;
-      -o-box-shadow: 0 0 15px #111;
-      box-shadow: 0 0 15px #111;
+      border: solid 8px white;
+      -webkit-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      -khtml-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      -moz-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      -ms-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      -o-box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
       -webkit-border-radius: 5px;
       -khtml-border-radius: 5px;
       -moz-border-radius: 5px;
@@ -81,99 +89,99 @@ img {
       border-radius: 5px; }
     .slider .slide:nth-child(1) {
       z-index: 10;
-      -webkit-transform: translate3d(445px, 210px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(445px, 210px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(445px, 210px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(445px, 210px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(445px, 210px, -2000px) rotatey(-45deg);
-      transform: translate3d(445px, 210px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(440px, 160px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(2) {
       z-index: 9;
-      -webkit-transform: translate3d(490px, 160px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(490px, 160px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(490px, 160px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(490px, 160px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(490px, 160px, -2000px) rotatey(-45deg);
-      transform: translate3d(490px, 160px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(480px, 120px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(3) {
       z-index: 8;
-      -webkit-transform: translate3d(535px, 110px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(535px, 110px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(535px, 110px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(535px, 110px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(535px, 110px, -2000px) rotatey(-45deg);
-      transform: translate3d(535px, 110px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(520px, 80px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(4) {
       z-index: 7;
-      -webkit-transform: translate3d(580px, 60px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(580px, 60px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(580px, 60px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(580px, 60px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(580px, 60px, -2000px) rotatey(-45deg);
-      transform: translate3d(580px, 60px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(560px, 40px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(5) {
       z-index: 6;
-      -webkit-transform: translate3d(625px, 10px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(625px, 10px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(625px, 10px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(625px, 10px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(625px, 10px, -2000px) rotatey(-45deg);
-      transform: translate3d(625px, 10px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(600px, 0px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(6) {
       z-index: 5;
-      -webkit-transform: translate3d(670px, -40px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(670px, -40px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(670px, -40px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(670px, -40px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(670px, -40px, -2000px) rotatey(-45deg);
-      transform: translate3d(670px, -40px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(640px, -40px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(7) {
       z-index: 4;
-      -webkit-transform: translate3d(715px, -90px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(715px, -90px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(715px, -90px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(715px, -90px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(715px, -90px, -2000px) rotatey(-45deg);
-      transform: translate3d(715px, -90px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(680px, -80px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(8) {
       z-index: 3;
-      -webkit-transform: translate3d(760px, -140px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(760px, -140px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(760px, -140px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(760px, -140px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(760px, -140px, -2000px) rotatey(-45deg);
-      transform: translate3d(760px, -140px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(720px, -120px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(9) {
       z-index: 2;
-      -webkit-transform: translate3d(805px, -190px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(805px, -190px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(805px, -190px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(805px, -190px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(805px, -190px, -2000px) rotatey(-45deg);
-      transform: translate3d(805px, -190px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(760px, -160px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide:nth-child(10) {
       z-index: 1;
-      -webkit-transform: translate3d(850px, -240px, -2000px) rotatey(-45deg);
-      -khtml-transform: translate3d(850px, -240px, -2000px) rotatey(-45deg);
-      -moz-transform: translate3d(850px, -240px, -2000px) rotatey(-45deg);
-      -ms-transform: translate3d(850px, -240px, -2000px) rotatey(-45deg);
-      -o-transform: translate3d(850px, -240px, -2000px) rotatey(-45deg);
-      transform: translate3d(850px, -240px, -2000px) rotatey(-45deg); }
+      -webkit-transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5);
+      -khtml-transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5);
+      -moz-transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5);
+      -ms-transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5);
+      -o-transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5);
+      transform: translate3d(800px, -200px, -2000px) rotatey(-35deg) scale(0.5); }
     .slider .slide.active {
       z-index: 20;
-      -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-      -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-      -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-      -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-      -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-      transform: translate3d(-500px, 0, -1300px) rotatey(0deg); }
+      -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+      -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+      -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+      -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+      -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+      transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1); }
       .slider .slide.active:hover {
-        -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-        -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-        -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-        -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-        -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg);
-        transform: translate3d(-500px, 0, -1300px) rotatey(0deg); }
+        -webkit-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+        -khtml-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+        -moz-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+        -ms-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+        -o-transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1);
+        transform: translate3d(-500px, 0, -1300px) rotatey(0deg) scale(1); }
     .slider .slide:hover {
       z-index: 20; }
 
