--- a/sass/base.scss
+++ b/sass/base.scss
@@ -63,6 +63,38 @@ img{
             z-index: 20;
         }
     }
+    
+    .controls{
+        position: absolute;
+        bottom: 2rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+        text-align: center;
+        
+        button{
+            background: transparent;
+            padding: .7rem .91rem;
+            border: solid 2px #aaa;
+            color: white;
+            display: inline-block;
+            vertical-align: top;
+            cursor: pointer;
+            background: #aaa;
+            @include transition(all .5s ease-in);
+            @include border-radius(50%);
+            @include text-shadow(0 0 1px #111);
+            
+            &.active,
+            &:hover{
+                background: transparent;
+            }
+            
+            &:focus{
+                outline: none;
+            }
+        }
+    }
 }
 
 .back_button{
